--- a/tasks/unit_present.yml
+++ b/tasks/unit_present.yml
@@ -128,7 +128,7 @@
           when: >-
             ( ( systemd_unit.state is not defined ) or
             ( systemd_unit.state == "enabled" ) ) and
-            ( ( (systemd_service_facts | community.general.json_query(systemd_service_jpq)).status != "enabled" )
+            ( (systemd_service_facts | community.general.json_query(systemd_service_jpq)).status != "enabled" )
 
         - name: Systemd unit started
           ansible.builtin.systemd:
@@ -139,7 +139,7 @@
           when: >-
             ( ( systemd_unit.state is not defined ) or
             ( systemd_unit.state == "enabled" ) ) and
-            ( (systemd_service_facts | community.general.json_query(systemd_service_jpq)).state != "running" ) )
+            ( (systemd_service_facts | community.general.json_query(systemd_service_jpq)).state != "running" )
 
         - name: Systemd unit restarted
           ansible.builtin.systemd:
