--- a/tasks/file_templated.yml
+++ b/tasks/file_templated.yml
@@ -32,7 +32,7 @@
       ansible.builtin.file:
         path: "{{ systemd_file.path | ansible.builtin.dirname }}"
         state: directory
-        mode: 0755
+        mode: "0755"
         owner: root
         group: root
 
@@ -40,7 +40,7 @@
       ansible.builtin.template:
         src: unit.j2
         dest: "{{ systemd_file.path }}"
-        mode: 0644
+        mode: "0644"
         owner: root
         group: root
       register: systemd_file_present
