--- a/tasks/fix_files.yml
+++ b/tasks/fix_files.yml
@@ -57,7 +57,7 @@
         - systemd_devnull_symlinks is defined
 
     - name: Systemd daemon-reload
-      ansible.builtin.systemd:
+      ansible.builtin.systemd_service:
         daemon_reload: true
       when:
         - systemd_file_changed is defined
