--- a/tasks/unit_absent.yml
+++ b/tasks/unit_absent.yml
@@ -17,14 +17,14 @@
         verbosity: 2
 
     - name: Systemd unit stopped and disabled
-      ansible.builtin.systemd:
+      ansible.builtin.systemd_service:
         name: "{{ systemd_unit.name }}"
         enabled: false
         state: stopped
       register: systemd_unit_stopped
 
     - name: Systemd daemon-reload  # noqa: no-handler
-      ansible.builtin.systemd:
+      ansible.builtin.systemd_service:
         daemon_reload: true
       when: systemd_unit_stopped.changed
 
