--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -22,20 +22,7 @@
       ansible.builtin.service_facts:
       register: molecule_service_facts
 
-    - name: Debug the Network Time Synchronization service status
+    - name: Debug the service facts
       ansible.builtin.debug:
-        msg: "{{ molecule_service_facts | community.general.json_query(molecule_service_jpq) }}"
-        verbosity: 3
-      vars:
-        molecule_service_jpq: 'ansible_facts.services.["systemd-timesyncd.service"]|[0]'
-
-    - name: Check that the Network Time Synchronization service is enabled and running
-      ansible.builtin.assert:
-        that:
-          - (molecule_service_facts | community.general.json_query(molecule_service_jpq)).status == "enabled"
-          - (molecule_service_facts | community.general.json_query(molecule_service_jpq)).state == "running"
-        quiet: true
-      vars:
-        molecule_service_jpq: 'ansible_facts.services.["systemd-timesyncd.service"]|[0]'
-
+        var: molecule_service_facts
 ...
