--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ variables:
   ANSIBLE_INJECT_FACT_VARS: "0"
   ANSIBLE_NOCOWS: "1"
   ANSIBLE_REMOTE_TMP: "/tmp"
+  ANSIBLE_ROLES_PATH: "${CI_PROJECT_DIR}/..:~/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles"
   ANSIBLE_SHELL_ALLOW_WORLD_READABLE_TEMP: "1"
   DEBIAN_FRONTEND: noninteractive
   DEFAULT_MANAGED_STR: "Ansible managed"
@@ -41,28 +42,28 @@ stages:
   - noble
   - trixie
 bookworm:
-  image: registry.git.coop/webarch/containers/images/bookworm:20241107
+  image: registry.git.coop/webarch/containers/images/bookworm:20250213
   stage: bookworm
   script:
     - pre-commit install
     - pre-commit run --all-files
     - molecule test --all
 jammy:
-  image: registry.git.coop/webarch/containers/images/jammy:20241107
+  image: registry.git.coop/webarch/containers/images/jammy:20250213
   stage: jammy
   script:
     - pre-commit install
     - pre-commit run --all-files
     - molecule test --all
 noble:
-  image: registry.git.coop/webarch/containers/images/noble:20241107
+  image: registry.git.coop/webarch/containers/images/noble:20250213
   stage: noble
   script:
     - pre-commit install
     - pre-commit run --all-files
     - molecule test --all
 trixie:
-  image: registry.git.coop/webarch/containers/images/trixie:20241107
+  image: registry.git.coop/webarch/containers/images/trixie:20250213
   stage: trixie
   script:
     - pre-commit install
