--- a/meta/argument_specs.yml
+++ b/meta/argument_specs.yml
@@ -87,6 +87,7 @@ argument_specs:
             choices:
               - absent
               - enabled
+              - ignore
               - reboot
               - stopped
           verify:
